[tool.poetry]
name = "webdriver-actions"
version = "0.1.0"
description = "Provides base class for web UI interaction, using Selenium 4."
authors = ["Viacheslav <vacheslavuslistyj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
